Feature: sharable room link system

--- a/client/index.html
+++ b/client/index.html
@@ -102,6 +102,9 @@
   </div>
 
   <div id="hostLobby" class="hidden">
+    <p id="roomCodeDisplay">Room Code: </p>
+       <p id="shareLink" style="font-size: 15px; margin-top: 10px;"></p>
+
     <h2>Host Lobby</h2>
     <label>Rounds: <input type="number" id="roundsInput" value="5" min="1" max="10" /></label><br>
     <label>Time per Round: <input type="number" id="timeInput" value="30" min="10" max="120" /></label><br>
